  syntax = "proto3";

  option go_package = "./pb";

  package pb;

  service UserService {
    rpc CheckMobile(CheckMobileRequest) returns (CheckMobileResponse) {}
    rpc GetCaptcha(CaptchaRequest) returns (CaptchaResponse) {}
    rpc GetMobileCode(GetMobileCodeRequest) returns (GetMobileCodeResponse) {}
    rpc Register(RegisterRequest) returns (RegisterResponse) {}
    rpc Login(LoginRequest) returns (LoginResponse) {}
    rpc GenerateToken(GenerateTokenReq) returns (GenerateTokenResp) {}
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
    rpc GetUserDetail(UserInfoRequest) returns (UserInfoResponse) {}
    rpc UpdateUserInfo(UpdateUserInfoRequest) returns (UpdateUserInfoResponse) {}
    rpc UpdateMobile(UpdateMobileRequest) returns (UpdateMobileResponse) {}
    rpc UpdateEmail(UpdateEmailRequest) returns (UpdateEmailResponse) {}
    rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse) {}
    rpc RegisterByEmail(RegisterByEmailRequest) returns (RegisterByEmailResponse) {}
    rpc GetEmailCode(GetEmailCodeRequest) returns (GetEmailCodeResponse) {}
    rpc GetUserList(GetUserListRequest) returns (GetUserListResponse) {} // 新增的RPC方法
  }

  // 基础用户信息
  message User {
    int64 userId = 1;
    string username = 2;
    string email = 3;
    optional string phone = 4;
    optional string city = 5;
    optional string introduction = 6;
    optional string avatar = 7;
  }

  message CheckMobileRequest {
    string phone = 1;
  }

  message CheckMobileResponse {
    bool exist = 1;
  }

  message CaptchaRequest {
  }

  message CaptchaResponse {
    string captchaId = 1;
    string imageBase64 = 2; // 改为string类型
  }

  message GetMobileCodeRequest {
    string phone = 1;
    string captchaId = 2;
    string captchaCode = 3;
  }

  message GetMobileCodeResponse {
  }

  message RegisterRequest {
    optional string phone = 1;
    string password = 2;
    optional string code = 3;
    string name = 4;
    string password_confirm = 5; // 添加确认密码字段
  }

  message RegisterResponse {
    string accessToken = 1;
    string refreshToken = 2;
    int64 expiresIn = 3;
  }

  message LoginRequest {
    optional string username = 1;
    optional string email = 2;
    optional string phone = 3;
    string password = 4;
  }

  message LoginResponse {
    string accessToken = 1;
    string refreshToken = 2;
    int64 expiresIn = 3;
  }

  message RefreshTokenRequest {
    string accessToken = 1;
    string refreshToken = 2;
  }

  message RefreshTokenResponse {
    string accessToken = 1;
    string refreshToken = 2;
    int64 expiresIn = 3;
  }

  message UserInfoRequest {
    int64 userId = 1; // 添加获取用户信息所需的userId字段
  }

  message UserInfoResponse {
    User user = 1;
  }

  message UpdateUserInfoRequest {
    int64 userId = 1;
    optional string username = 2;
    optional string city = 3;
    optional string introduction = 4;
  }

  message UpdateUserInfoResponse {
    User user = 1;
  }

  message UpdateMobileRequest {
    int64 userId = 1;
    string newPhone = 2;
    string code = 3;
  }

  message UpdateMobileResponse {
    User user = 1;
  }

  message UpdateEmailRequest {
    int64 userId = 1;
    string email = 2;
    string code = 3;
  }

  message UpdateEmailResponse {
    User user = 1;
  }

  message UpdatePasswordRequest {
    int64 userId = 1;
    string oldPassword = 2;
    string newPassword = 3;
  }

  message UpdatePasswordResponse {
  }

  message GenerateTokenReq {
    int64 userId = 1;
  }
  message GenerateTokenResp {
    string accessToken = 1;
    int64 accessExpire = 2;
    string refreshToken = 3;
  }

  message RegisterByEmailRequest {
    string email = 1;
    string code = 2;
    string name = 3;
    string password = 4;
    string password_confirm = 5;
  }
  
  message RegisterByEmailResponse {
    string accessToken = 1;
    string refreshToken = 2;
    int64 expiresIn = 3;
  }

  message GetEmailCodeRequest {
    string email = 1;
    string captchaId = 2;
    string captchaCode = 3;
  }
  
  message GetEmailCodeResponse {
  }

  // 新增：用于列表展示的精简用户信息
  message UserInfo {
    string email = 1;
    string username = 2;
  }

  // 新增：获取用户列表的请求
  message GetUserListRequest {
    int64 lastUserId = 1;    // 上一次请求的最后一个用户ID，用于分页
    int32 batchSize = 2;     // 每次请求返回的用户数量
  }

  // 新增：获取用户列表的响应
  message GetUserListResponse {
    repeated UserInfo users = 1;  // 用户列表
    int64 lastUserId = 2;        // 本次请求的最后一个用户ID，用于下一次请求
  }
